# dolmen

doc/: tuto.md
src/: dolmen.ml  dune
src/classes/: dune  logic.ml  logic.mli
src/interface/: stmt.ml
src/languages/cmc/: ast.ml  dune  lexer.mll  parser.mly  parser.mly.conflicts  syntax.messages  tokens.mly
src/loop/: flow.ml  headers.ml  parser.ml  typer.ml  typer_intf.ml
src/model/: loop.ml
src/standard/: statement.ml  statement.mli
src/typecheck/: dune  intf.ml  thf.ml
tests/parsing/cmc/errors/: 001_identifier_index_1.expected  118_def_system_missing_keyword.cmc  118_def_system_missing_keyword.expected  119.expected  120.expected  121.expected  122.expected  123.expected  124.expected  125.expected  126.cmc  126.expected  127.expected  128.expected  129.expected  130.expected  131.expected  132.expected  133.cmc  133.expected  134.expected  135.expected  136.expected  137.expected  138.expected  139.expected  146.expected  147.expected  148.expected  149.expected  150.expected  151.expected  152.expected  153.expected  154.expected  155.cmc  155.expected  156.expected  157.expected  158.expected  (+10 more)
tools/: gentests.ml
