
; Language library definition
(library
  (name           dolmen_cmc)
  (public_name    dolmen.cmc)
  (instrumentation (backend bisect_ppx))
  (libraries      dolmen_std dolmen_intf menhirLib dolmen_smtlib2)
  (modules        Dolmen_cmc Tokens Lexer Parser Ast Syntax_messages)
)

; Common include
(include ../dune.common)

